force-app/main/default/objects/Calendar__c/Calendar__c.object-meta.xml
<CustomObject>
    <label>Calendar</label>
    <nameField>
        <displayFormat>CAL-{000000}</displayFormat>
        <label>Calendar Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>