force-app/main/default/objects/Calendar__c/fields/Add_Room_Or_Location__c.field-meta.xml
<CustomField>
    <fullName>Add_Room_Or_Location__c</fullName>
    <label>Add Room Or Location</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>