force-app/main/default/objects/Calendar__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project.</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Calendars</relationshipLabel>
    <relationshipName>Calendars</relationshipName>
    <type>Lookup</type>
</CustomField>